--- a/rootfilesystem/etc/supervisor/available.d/swoole_checker.conf
+++ b/rootfilesystem/etc/supervisor/available.d/swoole_checker.conf
@@ -1,8 +1,8 @@
 [supervisord]
 user = root
 
-[program:swoole2]
-command =env HTTP_PORT=9502 php /var/www/parser.php
+[program:checker]
+command php /var/www/checker.php
 user = root
 autostart = true
 autorestart = true
