--- a/rootfilesystem/etc/supervisor/available.d/checker.conf
+++ b/rootfilesystem/etc/supervisor/available.d/checker.conf
@@ -2,7 +2,7 @@
 user = root
 
 [program:checker]
-command php /var/www/checker.php
+command =env HTTP_PORT=9560 php /var/www/checker.php
 user = root
 autostart = true
 autorestart = true
